--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
-  "name": "application-name",
-  "version": "0.0.1",
+  "name": "DocBuilder",
+  "version": "1.9.0",
   "private": true,
   "scripts": {
     "start": "node app.js"
   },
   "dependencies": {
-    "express": "3.4.0",
-    "jade": "*"
+    "express": "~3.4.0",
+    "collections": "~1.2.1",
+    "jade": "~1.5.0",
+    "moment": "~2.8.2",
+    "jquery": "~2.1.1"
   }
 }
